--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,13 @@
             <version>${spring.version}</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>com.alibaba.rocketmq</groupId>
+            <artifactId>rocketmq-client</artifactId>
+            <version>3.2.8</version>
+        </dependency>
+
     </dependencies>
 
 
