--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,8 @@
         <maven.test.skip>true</maven.test.skip>
         <downloadSources>true</downloadSources>
         <!-- compiler settings properties -->
-        <java_source_version>1.7</java_source_version>
-        <java_target_version>1.7</java_target_version>
         <file_encoding>UTF-8</file_encoding>
+        <JAVA8_HOME>/Library/Java/JavaVirtualMachines/jdk1.8.0_60.jdk/Contents/Home</JAVA8_HOME>
     </properties>
 
     <dependencies>
@@ -184,7 +183,13 @@
                     <source>1.8</source>
                     <target>1.8</target>
                     <encoding>UTF-8</encoding>
+
+                    <verbose>true</verbose>
+                    <fork>true</fork>
+                    <executable>${JAVA8_HOME}/bin/javac</executable>
+
                 </configuration>
+
             </plugin>
         </plugins>
     </build>
