--- a/pom.xml
+++ b/pom.xml
@@ -198,7 +198,29 @@
             <artifactId>commons-httpclient</artifactId>
             <version>3.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>2.6.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.tongbanjie.ddtx</groupId>
+            <artifactId>ddtx-core</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
 
+        <!--netty zookeeper 和 rocketmq的jar 包中已经包含了，这里不重复导入了-->
+        <!--<dependency>-->
+            <!--<groupId>io.netty</groupId>-->
+            <!--<artifactId>netty-all</artifactId>-->
+            <!--<version>4.0.25.Final</version>-->
+        <!--</dependency>-->
 
     </dependencies>
 
