--- a/pom.xml
+++ b/pom.xml
@@ -223,6 +223,27 @@
             <!--<version>4.0.25.Final</version>-->
         <!--</dependency>-->
 
+        <!-- kafka -->
+        <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka -->
+        <!--<dependency>-->
+            <!--<groupId>org.apache.kafka</groupId>-->
+            <!--<artifactId>kafka_2.11</artifactId>-->
+            <!--<version>2.0.0</version>-->
+        <!--</dependency>-->
+
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka_2.10</artifactId>
+            <version>0.10.0.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka_2.11</artifactId>
+            <version>0.8.2.2</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
