--- a/pom.xml
+++ b/pom.xml
@@ -88,10 +88,20 @@
         </dependency>
 
 
+        <!--<dependency>-->
+            <!--<groupId>com.alibaba.rocketmq</groupId>-->
+            <!--<artifactId>rocketmq-client</artifactId>-->
+            <!--<version>3.2.8</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>com.alibaba.rocketmq</groupId>
             <artifactId>rocketmq-client</artifactId>
-            <version>3.2.8</version>
+            <version>3.2.7</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.rocketmq</groupId>
+            <artifactId>rocketmq-common</artifactId>
+            <version>3.2.7</version>
         </dependency>
 
 
@@ -242,6 +252,13 @@
             <artifactId>kafka_2.11</artifactId>
             <version>0.8.2.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka_2.10</artifactId>
+            <version>0.8.2.1</version>
+        </dependency>
+
 
 
     </dependencies>
