--- a/pom.xml
+++ b/pom.xml
@@ -246,11 +246,18 @@
             <!--<version>2.0.0</version>-->
         <!--</dependency>-->
 
+
+        <!--<dependency>-->
+            <!--<groupId>org.apache.kafka</groupId>-->
+            <!--<artifactId>kafka_2.10</artifactId>-->
+            <!--<version>0.10.0.1</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.apache.kafka</groupId>
-            <artifactId>kafka_2.10</artifactId>
-            <version>0.10.0.1</version>
+            <artifactId>kafka_2.12</artifactId>
+            <version>2.1.0</version>
         </dependency>
+
 
         <dependency>
             <groupId>org.apache.kafka</groupId>
