--- a/pom.xml
+++ b/pom.xml
@@ -277,6 +277,13 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <!--<version>2.12.3</version>-->
+            <version>3.2.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
