Redis RedLock 实现的锁

--- a/pom.xml
+++ b/pom.xml
@@ -285,6 +285,12 @@
             <version>3.2.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.11.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
