--- a/Test/pom.xml
+++ b/Test/pom.xml
@@ -45,6 +45,12 @@
             <version>1.2.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba.nacos</groupId>
+            <artifactId>nacos-client</artifactId>
+            <version>1.2.0</version>
+        </dependency>
+
     </dependencies>
 
 
