--- a/pom.xml
+++ b/pom.xml
@@ -291,6 +291,14 @@
             <version>3.11.2</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>2.4.21</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
